--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fontsource/montserrat": "^4.2.2",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.3"
     }
 }
